<package format="2">
    <name>imu_jitter_filter</name>
    <version>0.1.0</version>
    <description>Filters jitter in sensor_msgs/Imu.</description>
    <maintainer email="hershv@umich.edu">Hersh</maintainer>
    <license>BSD 3-Clause License</license>

    <url type="repository">https://github.com/umigv/imu_jitter</url>
    <author>Hersh Vakharia, Kyle Scott</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
</package>
